# octomap_tutor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cmake_modules/: octomap-config.cmake
data/: keyframe.txt  map.ot  result_after.g2o  sample.bt  sample.ot  trajectory.txt
data/rgb_index/: 144.ppm  230.ppm  313.ppm  346.ppm  54.ppm
src/: CMakeLists.txt  joinMap.cpp  pcd2colorOctomap.cpp  pcd2octomap.cpp
